# backwards-a_star

./: README.md
code/: CMakeLists.txt  db  db.sh  todo.md
code/include/: helper.h  heuristic.h  map.h  openlist.h  planner.h  state.h  structs.h
code/maps/: map0.txt
code/scripts/: visualizer.py
code/src/: planner.cpp  runtest.cpp
